--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,4 @@ License: GPL-2
 Author: Dale J. Barr <dalejbarr3@gmail.com>
 Maintainer: Dale J. Barr <dalejbarr3@gmail.com>
 Imports: clusterGeneration, MASS
+RoxygenNote: 6.0.1
