--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,13 @@ export(contr.dev)
 export(design_formula)
 export(fac_counts)
 export(gen_pop)
+export(prmd_factor)
 export(sim_norm)
 export(stim_lists)
 export(term_names)
 export(trial_lists)
 export(with_dev_pred)
 importFrom(MASS,mvrnorm)
+importFrom(Rcpp,sourceCpp)
 importFrom(clusterGeneration,genPositiveDefMat)
+useDynLib(funfact, .registration = TRUE)
